// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment counter 1`] = `
<div
  className="productCard custom class"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should render component 1`] = `
<div
  className="productCard custom class"
>
  <h1>
    Product card
  </h1>
</div>
`;
